# NVMS

./: CURRENCY_CHANGES_SUMMARY.md  FRONTEND_OPTIMIZATION_COMPLETE.md  Improvements.md  OPTIMIZATION_GUIDE.md  README.md  frontend_guidelines.md
backend/: .gitignore  PERFORMANCE_OPTIMIZATIONS.md  data.json  db.sqlite3  manage.py  pyproject.toml
backend/apps/bulletin/: apps.py
backend/apps/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/portfolio/migrations/: 0001_initial.py  0002_portfolio_source_project.py
backend/apps/projects/: PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPLEMENTATION.md  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_project_supervisor_alter_project_assigned_to_and_more.py  0003_project_manual_progress.py  0004_projectnote_image_projectnote_mentioned_users.py  0005_project_projects_pr_status_d9e5a3_idx_and_more.py
backend/apps/wallet/: EXCHANGE_RATES.md  INTEGRATION_SUMMARY.md  README.md  admin.py  auth_views.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/wallet/management/: __init__.py
backend/apps/wallet/migrations/: 0001_initial.py  0002_alter_wallet_unique_together_remove_wallet_user.py  0003_remove_expense_user_remove_income_user_and_more.py  0004_remove_budget_user_remove_savingsgoal_user.py  0005_expense_amount_original_expense_currency_original_and_more.py  0006_currency_is_default_and_more.py  0008_subscription_is_active.py  (+2 more)
backend/core/: asgi.py  settings.py  wsgi.py
backend/nvms/: settings.py  urls.py
(+66 files in other folders)
